fix: adjust image size and alignment to accomodate for tall images

--- a/adam-swanson-site/src/cards.scss
+++ b/adam-swanson-site/src/cards.scss
@@ -218,8 +218,9 @@
         }
 
         .image {
+          display: flex;
+          align-items: center;
           max-width: 4rem;
-          max-height: 4rem;
           padding-right: 1.5rem;
 
           img {
